<resources>
    <string name="app_name">Calculatrice</string>
    <string name="bienvenue">Bienvenue dans cette calculatrice !</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="del">DEL</string>
    <string name="division">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">X</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="soustraction">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="addition">+</string>
    <string name="inverse">+-</string>
    <string name="_0">0</string>
    <string name="virgule">,</string>
    <string name="egal">=</string>
</resources>
