<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:textColor="@color/colorWhite"
    android:background="@color/colorPrimary"
    tools:context=".CalcView">

    <TextView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bienvenue"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_weight="1"
        android:textColor="@color/colorWhite"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/calc"
        >
        <TableRow android:gravity="center">
            <Button
                android:id="@+id/effacer"
                android:tag="D"
                android:text="@string/ce" />
            <Button
                android:id="@+id/effacerTout"
                android:tag="C"
                android:text="@string/c" />
            <Button
                android:id="@+id/suppression"
                android:tag="S"
                android:text="@string/del"/>
            <Button
                android:id="@+id/division"
                android:tag="/"
                android:text="@string/division"/>
        </TableRow>
        <TableRow android:gravity="center">
            <Button
                android:id="@+id/button7"
                android:tag = "7"
                android:text="@string/_7"/>
            <Button
                android:id="@+id/button8"
                android:tag="8"
                android:text="@string/_8"/>
            <Button
                android:id="@+id/button9"
                android:tag="9"
                android:text="@string/_9"/>
            <Button
                android:id="@+id/multiplication"
                android:tag="X"
                android:text="@string/x"/>
        </TableRow>
        <TableRow android:gravity="center">
            <Button
                android:id="@+id/button4"
                android:tag="4"
                android:text="@string/_4"/>
            <Button
                android:id="@+id/button5"
                android:tag="5"
                android:text="@string/_5"/>
            <Button
                android:id="@+id/button6"
                android:tag="6"
                android:text="@string/_6"/>
            <Button
                android:id="@+id/soustraction"
                android:tag="-"
                android:text="@string/soustraction"/>
        </TableRow>
        <TableRow android:gravity="center">
            <Button
                android:id="@+id/button1"
                android:tag="1"
                android:text="@string/_1"/>
            <Button
                android:id="@+id/button2"
                android:tag="2"
                android:text="@string/_2"/>
            <Button
                android:tag="3"
                android:id="@+id/button3"
                android:text="@string/_3"/>
            <Button
                android:tag="+"
                android:id="@+id/addition"
                android:text="@string/addition"/>
        </TableRow>
        <TableRow android:gravity="center">
            <Button
                android:id="@+id/inversion"
                android:tag="I"
                android:text="@string/inverse"/>
            <Button
                android:id="@+id/button0"
                android:tag="0"
                android:text="@string/_0"/>
            <Button
                android:id="@+id/virgule"
                android:tag=","
                android:text="@string/virgule"/>
            <Button
                android:id="@+id/egal"
                android:tag="="
                android:text="@string/egal"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
